=== 2.0.1 / 2011-11-09

* Fix the errors in depix-describe

=== 2.0.0 / 2011-06-14

* Depix::Binary is now public, and it's a nice library. Check it out.
* Ensure 1.9 compatibility. Note that we COMPLACENTLY force strings to US-ASCII when saving them to DPX.

=== 1.1.6 / 2010-10-20

* Fix unpacking reals and longs from little-endian DPX headers

=== 1.1.5 / 2010-10-20

* Properly detect the DPX version when it is entered lowercase

=== 1.1.4 / 2010-08-04

* Properly fallback to film framerate in timecode detection if television framerate is 
  recognized as being zero (is a fact for Nuke renders)

=== 1.1.3 / 2010-02-12

* Discard charfield content that comes after the first null byte (seriously, who cares?)
* Add Editor#copy_from(another_dpx)

=== 1.1.2 / 2009-12-27

* Do not try to work with timecode data if it's nil

=== 1.1.1 / 2009-12-27

* Return nil for flame_reel if the header was empty

=== 1.1.0 / 2009-11-16

* Be more intelligent when selecting timecode framerate source

=== 1.0.9 / 2009-11-16

* Accomodate the frames per second value from the file for synthetics time code

=== 1.0.8 / 2009-11-14

* Fix the version tag check so that it allows all versions but is still included, and so that the tests run

=== 1.0.7 / 2009-05-21

* Do not bail out on headers newer than V1.0
* Allow access to headers directly in Depix::Editor
* Fix project field name

=== 1.0.5 / 2009-01-18

* Switch project to guerilla-di

=== 1.0.4 / 2008-12-25

* Add brief inspect
* Add metadata editing

=== 1.0.3 / 2008-12-23

* Do not cleanup null bytes and terminators in the middle of char[] attributes (something useful might be in there)

=== 1.0.2 / 2008-12-19

* refactor struct parsing completely

=== 1.0.1 / 2008-12-18

* small doc and usability improvements

=== 1.0.0 / 2008-12-18

* 1 major enhancement

  * Birthday!
