@@ -5,7 +5,12 @@ require './lib/depix'
 Hoe.spec('depix') do |p|
   p.version = Depix::VERSION
   p.developer('Julik Tarkhanov', 'me@julik.nl')
-  p.extra_deps = {'timecode' => "~> 1.0"}
+  p.extra_deps = {
+    'timecode' => "~> 1.0",
+    "progressbar" => "~> 0.9",
+    "sequencer" => "~> 1.0",
+  }
+  
   p.extra_dev_deps = {'cli_test' => "~> 1.0"}
   p.readme_file   = 'README.rdoc'
   p.extra_rdoc_files  = FileList['*.rdoc']
